spring-boot-error/src/main/java/com/example/springboot/error/app/service/UsuarioService.java
package com.example.springboot.error.app.service;

import com.example.springboot.error.app.models.domain.Usuario;

import java.util.List;
import java.util.Optional;

public interface UsuarioService {
    public List<Usuario> listar();
    public Usuario obtenerPorId(Integer id);
    public Optional<Usuario> obtenerPorIdOptional(Integer id);
}
